<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/shopping_online"
        android:contentDescription="@string/welcome_screen_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_screen"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_margin="@dimen/margin_size_30"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/next"
        android:backgroundTint="#FF5733"/>

</LinearLayout>
</layout>