<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    android:gravity="center|top">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="@dimen/margin_size_30">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/app_name_size"
            android:text="@string/appName"/>

        <ImageView
            android:layout_width="@dimen/image_size_login"
            android:layout_height="@dimen/image_size_login"
            android:layout_marginStart="10dp"
            android:src="@drawable/shoes"
            android:contentDescription="@string/image_of_the_app" />

    </LinearLayout>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:inputType="textEmailAddress"
        android:textAlignment="gravity"
        android:background="#dcdcdc"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:layout_marginBottom="15dp"/>



    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:background="#dcdcdc"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_signIn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:text="@string/SignIn"
        android:layout_gravity="center"
        android:background="#58efb6"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_don_t_have_account"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_signUp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:text="@string/SignIn"
        android:layout_gravity="center"
        android:background="#FFC300"/>



</LinearLayout>

</layout>