<?xml version="1.0" encoding="utf-8"?>

<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/delivery_truck"
        android:contentDescription="@string/welcome_screen_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver_fast"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="we can deliver in just a few days from your order submit , where ever you live , our deliver partner company will deliver"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/let_s_start"
        android:backgroundTint="#FF5733"/>

</LinearLayout>
</layout>