<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.ameer.shoeStore.models.AddItem" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="#dcdcdc">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_addItem"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#efb658"
            android:layout_gravity="top"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/margin_size_30"
            android:autofillHints="name"
            android:layout_marginTop="@dimen/margin_size_30"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/et_size"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/margin_size_30"
            android:autofillHints="size"
            android:ems="10"
            android:layout_marginTop="@dimen/margin_size_30"
            android:hint="@string/size"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="277dp" />

        <EditText
            android:id="@+id/et_company"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/margin_size_30"
            android:autofillHints=""
            android:layout_marginTop="@dimen/margin_size_30"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="390dp" />

        <EditText
            android:id="@+id/et_desc"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/margin_size_30"
            android:autofillHints=""
            android:layout_marginTop="@dimen/margin_size_30"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="504dp" />

        <Button
            android:id="@+id/bt_add"
            android:layout_width="351dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_size_30"
            android:layout_marginHorizontal="@dimen/margin_size_30"
            android:text="@string/add"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="618dp" />
    </LinearLayout>
</layout>